tests/for_postfix_inc_bad.hop
// Verifies invalid postfix increment diagnostic in for post clause.
fn main() {
    for i := 1; i <= 100; i++ {
    }
}
